# TwitterScraper

./: README.md  pyproject.toml  setup.py
swagger_server/: __main__.py
swagger_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swagger_server/controllers/: tweets_controller.py
swagger_server/models/: __init__.py  tweets.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_tweets_controller.py
tests/: test_twitterscraper.py
twitterscraper/utills/: authentication.py  env.py
